--- a/.github/workflows/master_azurewebapp-mk.yml
+++ b/.github/workflows/master_azurewebapp-mk.yml
@@ -54,5 +54,5 @@ jobs:
         with:
           app-name: 'AzureWebApp-mk'
           slot-name: 'Production'
-          package: myapp
+          package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E0B85E7AB6A64E5399AD7F36F3103287 }}
